# facto-exporter

./: .gitignore  .prettierignore  Cargo.toml  Justfile  NOTES.md  index.html  offsets.c  package-lock.json  package.json  pivot.py  static.sh  tsconfig.json
by-debug/: .gitignore  Cargo.toml  NOTES.md  offsets.c
by-debug/shellcode/: Makefile  crafting.c  crafting2.c  stage1-gen.c
by-debug/src/debug/: elf.rs  mod.rs  ptrace.rs
by-debug/src/debug/snapshots/: facto_exporter__debug__mangle__test__insta_multi.snap
by-debug/tests/: test_stage1.rs
mod/: .gitignore  NOTES.md  control.lua  info.json  package-lock.json  package.json
shellcode/: .gitignore  Makefile  call-end.nasm  crafting.bin.addr  crafting.c  crafting2.bin.addr  crafting2.c  mock-get-status.bin.addr  mock-get-status.c  stage1-gen.c  stage1.nasm  stage2.c
src/: index.ts  lib.rs  main.rs  main.ts  serve.ts
src/debug/: elf.rs  inject.rs  mangle.rs  mod.rs  ptrace.rs
src/debug/snapshots/: facto_exporter__debug__mangle__test__insta_products_finished.snap  facto_exporter__debug__mangle__test__insta_unsigned_char.snap  facto_exporter__debug__mangle__test__mongle.snap
tests/: test_stage1.rs
tests/victim1/: Makefile  loop.cpp  main.cpp  obj.h  victim1
web/: Home.tsx  fetch.ts  index.tsx  style.css
web/lib/: fetch.ts  ts.ts
web/pages/: AssemCard.tsx  Home.tsx  LoadAtlas.tsx  SurfaceMap.tsx  WatchProduction.tsx
