[package]
name = "facto-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
archiv = "0.1.1"
axum = "0.6"
elf = "0.7"
memchr = "2.5.0"
nix = { version = "0.26", features = ["ptrace"] }
reqwest = "0.11"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.29", features = ["full"] }
