[package]
name = "facto-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
archiv = "0.1"
axum = { version = "0.6", features = ["macros"] }
bincode = "1.3"
bunyarrs = "0.2"
bytes = "1.4"
elf = "0.7"
memchr = "2.5"
nix = { version = "0.26", features = ["ptrace"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting", "serde", "parsing"] }
tokio = { version = "1.29", features = ["full"] }
