[package]
name = "facto-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
archiv = "0.1"
axum = { version = "0.7", features = ["macros"] }
bincode = "1.3"
bunyarrs = "0.2"
bytemuck = { version = "1", features = ["derive"] }
bytes = "1.4"
colored = "2"
cpp_demangle = "0.4"
elf = "0.7"
iced-x86 = { version = "1.20", features = ["code_asm"] }
memchr = "2.5"
nix = { version = "0.28", features = ["ptrace", "uio"] }
nom = "7"
once_cell = "1.18"
regex = "1.9"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting", "serde", "parsing"] }
tokio = { version = "1.29", features = ["full"] }

[dev-dependencies]
insta = "1.36.1"
